Updated container management

--- a/usage/postgres_example.ipynb
+++ b/usage/postgres_example.ipynb
@@ -136,7 +136,7 @@
                     "name": "stdout",
                     "output_type": "stream",
                     "text": [
-                        "Created temporary directory: C:\\Users\\acisse\\AppData\\Local\\Temp\\tmp1oc4y69u\n"
+                        "Created temporary directory: C:\\Users\\acisse\\AppData\\Local\\Temp\\tmpgu46_y8x\n"
                     ]
                 }
             ],
