Added connection_string methods and env_var options. Now testing results in usage

--- a/usage/postgres_example.ipynb
+++ b/usage/postgres_example.ipynb
@@ -158,7 +158,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 3,
+            "execution_count": null,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -175,6 +175,7 @@
                 "    container_name=container_name,\n",
                 "    retries=20,\n",
                 "    delay=3,\n",
+                "    env_vars={\"YourEnvVar\": \"TestVar\"}\n",
                 ")\n",
                 "\n",
                 "# Initialize the database manager\n",
@@ -231,12 +232,12 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 5,
+            "execution_count": null,
             "metadata": {},
             "outputs": [],
             "source": [
                 "# Define the connection string for SQL magic\n",
-                "conn_string = f\"postgresql://{config.user}:{config.password}@{config.host}:{config.port}/{config.database}\"\n",
+                "conn_string = db_manager.connection_string(sql_magic=True)\n",
                 "%sql $conn_string"
             ]
         },
