Updated the examples. Init script and env vars working as expected. Need to work on variable substitution into the .sql files tho

--- a/usage/mongo_example.ipynb
+++ b/usage/mongo_example.ipynb
@@ -98,7 +98,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 3,
+            "execution_count": null,
             "metadata": {},
             "outputs": [
                 {
@@ -111,10 +111,12 @@
             ],
             "source": [
                 "import tempfile\n",
-                "\n",
-                "# Create a temporary directory\n",
-                "temp_dir = Path(tempfile.mkdtemp())\n",
-                "print(f\"Created temporary directory: {temp_dir}\")"
+                "import os\n",
+                "temp_dir = Path(\"tmp\")\n",
+                "temp_dir.mkdir(exist_ok=True)\n",
+                "container_name = f\"demo-mongodb-{uuid.uuid4().hex[:8]}\"\n",
+                "init_script_path = Path(\"configs\", \"mongodb\", \"init.js\")\n",
+                "init_script_path.exists()"
             ]
         },
         {
@@ -126,7 +128,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 4,
+            "execution_count": null,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -144,8 +146,9 @@
                 "    workdir=temp_dir,\n",
                 "    container_name=container_name,\n",
                 "    retries=20,\n",
-                "    delay=3,\n",
-                ")\n",
+                "    delay=3, \n",
+                "    nit_script=init_script_path,\n",
+                "    env_vars={\"YourEnvVar\": \"TestEnvironment\"})\n",
                 "\n",
                 "# Initialize the database manager\n",
                 "db_manager = MongoDB(config)"
