--- a/usage/mysql_example.ipynb
+++ b/usage/mysql_example.ipynb
@@ -122,7 +122,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 3,
             "metadata": {},
             "outputs": [
                 {
@@ -289,6 +289,16 @@
                 "# Define the connection string for SQL magic\n",
                 "conn_string = db_manager.connection_string(sql_magic=True)\n",
                 "%sql $conn_string"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "%sql\n",
+                "SELECT * FROM test_table;"
             ]
         },
         {
